--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^0.9.0",
     "style-loader": "^0.16.1",
     "vue-loader": "^11.1.4",
+    "vue-router": "^2.3.1",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
