--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "mint-ui": "^2.2.3",
     "vue": "^2.2.1",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "axios": "^0.16.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-latest": "^6.0.0",
