--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mint-ui": "^2.2.3",
+    "muse-ui": "^2.0.2",
     "vue": "^2.2.1",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1",
