--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-  "presets": [
-    ["latest", {
-      "es2015": { "modules": false }
-    }]
-  ]
+    "presets": [
+        ["es2015", { "modules": false }]
+    ],
+    "plugins": [
+        ["component", [{
+            "libraryName": "mint-ui",
+            "style": true
+        }]]
+    ]
 }
