--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-component": "^0.9.1",
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "style-loader": "^0.16.1",
     "vue-loader": "^11.1.4",
     "vue-router": "^2.3.1",
