--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "style-loader": "^0.16.1",
+    "vue-cookie": "^1.1.4",
     "vue-loader": "^11.1.4",
     "vue-router": "^2.3.1",
     "vue-template-compiler": "^2.2.1",
+    "vuex": "^2.3.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   }
