--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mint-ui": "^2.2.3",
     "muse-ui": "^2.0.2",
     "vue": "^2.2.1",
+    "vue-bus": "^1.0.0",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.2.1"
